--- a/DocSearch2.1/Views/PublicVM/Index.cshtml
+++ b/DocSearch2.1/Views/PublicVM/Index.cshtml
@@ -149,50 +149,7 @@
             <div class="col-md-12"><h4>Returning <span id="currentCount">@ViewData["currentRecordsCount"]</span> of @ViewData["allRecordsCount"] documents between <span id="currentLowYear">@(((List<SelectListItem>)TempData["YearRange"]).First().Text)</span> and <span id="currentHighYear">@(((List<SelectListItem>)TempData["YearRange"]).Last().Text)</span></h4></div>
         </div>
 
-        <!--Search Box, Date Filters, clear, and submit button-->
-        <div id="form-div">
-            <form method="get" action="@Url.Action("Index")" data-otf-ajax="true" data-otf-target="#public_table" class="row">
-                <div class="filter col-md-3">
-                    <label for="search">Search Description:</label>
-                    <input id="search" type="hidden" name="publicId" value="@Model.First().Folder_ID" />
-
-                    <input id="searchInputBox" type="search" name="searchTerm" />
-                    <fieldset>
-                        Records per page:
-                        <select id="pageSize" name="pageSize">
-                            <option value=10>10</option>
-                            <option value=20 selected>20</option>
-                            <option value=50>50</option>
-                            <option value=1000>All</option>
-                        </select>
-                    </fieldset>
-                </div>
-                <div class="filter col-md-3">
-                    <label for="IssueDateMinRange">Issue Date Starting year:</label>
-                    @Html.DropDownList("IssueYearMinRange", TempData["YearRange"] as List<SelectListItem>, "Select a Year", new { @class = "datefield", type = "date" })
-                    <br/>
-                </div>
-                <div class="filter col-md-3">
-                    <label for="IssueDateMaxRange">Issue Date Ending year:</label>
-                    @Html.DropDownList("IssueYearMaxRange", TempData["YearRange"] as List<SelectListItem>, "Select a Year", new { @class = "datefield", type = "date" })
-                    <br />
-                </div>
-                <div class="filter col-md-3 buttondiv">
-                    @Ajax.ActionLink("Reset Search", "Index", new
-               {
-                   publicId = Model.First().Folder_ID
-               }, new AjaxOptions
-               {
-                   HttpMethod = "GET",
-                   InsertionMode = InsertionMode.ReplaceWith,
-                   UpdateTargetId = "public_table",
-                   OnComplete = "updateCurrentCount",
-                   OnSuccess = "clearFields"
-               }, new { @class = "button", id="clearButton" })
-                    <input id="formSubmitId" type="submit" value="Search and Filter"/>
-                </div>
-            </form>
-        </div>
+        @Html.Partial("_Form", Model)
         @Html.Partial("_PublicTable", Model)
     </div>
     <div class="c_b"></div>
