--- a/DocSearch2.1/Content/Site.css
+++ b/DocSearch2.1/Content/Site.css
@@ -118,8 +118,8 @@ header {
             /* The switch control appearance*/
             .switch {
                 position: relative; 
-                width: 50px;
-                height: 34px;
+                width: 60px;
+                height: 25px;
             }
                 /* Hide default HTML checkbox */
                 .switch input {display:none;}
@@ -141,8 +141,8 @@ header {
                     .slider:before {
                         position: absolute;
                         content: "";
-                        height: 26px;
-                        width: 26px;
+                        height: 18px;
+                        width: 18px;
                         left: 4px;
                         bottom: 4px;
                         background-color: white;
@@ -158,9 +158,9 @@ header {
 
                     /*The Slider Movement Animation*/
                     input:checked + .slider:before {
-                        -webkit-transform: translateX(16px);
-                        -ms-transform: translateX(16px);
-                        transform: translateX(16px);
+                        -webkit-transform: translateX(33px);
+                        -ms-transform: translateX(33px);
+                        transform: translateX(33px);
                     }
 
                     /* Outer Rounded slider part */
@@ -254,18 +254,26 @@ header {
     /*overflow:hidden;*/
 }
 
+header {
+    position: relative;
+}
     /*Constant 'public' info display*/
     .public_name_id {
-        height: 75px;
-        text-align: center;
-    }
+        /*height: 75px;
+        text-align: left;*/
+        /*position: absolute;
+        bottom: 0;*/
+        position: absolute;
+        bottom: 0;
+        left: 10px;
+        }
 
         /*affects the name and id status positioning*/
-        .public_name_id h3 {
+        /*.public_name_id h3 {
             position: absolute;
             top: 25%;
             left: 25%;
-        }
+        }*/
 
     /*Gives the input boxes a better look*/
     .filter {
@@ -457,9 +465,9 @@ header {
 
             /*The Slider Movement Animation*/
             input:checked + .slider:before {
-                -webkit-transform: translateY(20px);
-                -ms-transform: translateY(20px);
-                transform: translateY(20px);
+                -webkit-transform: translateY(200px);
+                -ms-transform: translateY(200px);
+                transform: translateY(200px);
             }
 
     /*affects the category names*/
