--- a/DocSearch2.1/Views/PublicVM/Index.cshtml
+++ b/DocSearch2.1/Views/PublicVM/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Westland Archive System";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div id ="main-row" class="row">
+<div id="main-row" class="row">
     <nav id="public_navigation" class="navbar navbar-default col-md-2">
 
         <div class="div-table">
@@ -100,12 +100,12 @@
                 @Html.Partial("~/Views/Shared/_CategoryNavBar.cshtml", Model)
 
                 <div id="policy_section" class="hidden">
-                    <h2>Policies</h2>
+                    @*<h2>Policies</h2>*@
                     <ul id="policy_list">
                         <!--need to check for no reference number documents with the policy !- null-->
                         @foreach (var policy in ViewBag.PolicyNavBar)
                         {
-                            if (policy != null && policy.Length > 0) 
+                            if (policy != null && policy.Length > 0)
                             {
                                 <li>
                                     <a href="@Url.Action("Index", "PublicVM", new
@@ -124,7 +124,7 @@
                                        data-ajax-complete="postNavbar"
                                        data-ajax-success="updateCurrentCount"
                                        data-ajax="true">
-                                       @policy
+                                        @policy
                                     </a>
                                 </li>
                             }
@@ -132,25 +132,51 @@
                     </ul>
                 </div>
             </div><!--nav_lists col-md-12-->
-        </div><!--nav_lists_outer row--> 
+        </div><!--nav_lists_outer row-->
     </nav>
 
     <div id="public_info" class="col-md-10">
 
-        <div class="public_name_id row">
-            <div class="col-md-6">
-                <h3>Name: @TempData["Client_Name"]</h3>
-            </div>
-            <div class="col-md-6">
-                <h3>ID: @TempData["Client_Id"]</h3>
-            </div>
-        </div>
+        @*<div class="public_name_id row">
+                <div class="col-md-6">
+                    <h3>Name: @TempData["Client_Name"]</h3>
+                </div>
+                <div class="col-md-6">
+                    <h3>ID: @TempData["Client_Id"]</h3>
+                </div>
+            </div>*@
         <div id="status-bar" class="row">
-            <div class="col-md-12"><h4>Returning <span id="currentCount">@ViewData["currentRecordsCount"]</span> of @ViewData["allRecordsCount"] documents between <span id="currentLowYear">@(((List<SelectListItem>)TempData["YearRange"]).First().Text)</span> and <span id="currentHighYear">@(((List<SelectListItem>)TempData["YearRange"]).Last().Text)</span></h4></div>
+            <div class="col-md-3">
+                <fieldset>
+                    Records per page:
+                    <select id="pageSize" name="pageSize">
+                        <option value=10>10</option>
+                        <option value=20 selected>20</option>
+                        <option value=50>50</option>
+                        <option value=1000>All</option>
+                    </select>
+                </fieldset>
+            </div>
+            @*<div class="col-md-7"><h4>Returning <span id="currentCount">@ViewData["currentRecordsCount"]</span> of @ViewData["allRecordsCount"] documents between <span id="currentLowYear">@(((List<SelectListItem>)TempData["YearRange"]).First().Text)</span> and <span id="currentHighYear">@(((List<SelectListItem>)TempData["YearRange"]).Last().Text)</span></h4></div>*@
+            <div class="col-md-7"><h4>Returning <span id="currentCount">@ViewData["currentRecordsCount"]</span> of @ViewData["allRecordsCount"] documents, <span id="currentLowYear">@(((List<SelectListItem>)TempData["YearRange"]).First().Text)</span> to <span id="currentHighYear">@(((List<SelectListItem>)TempData["YearRange"]).Last().Text)</span></h4></div>
+            <div class="col-md-2">
+                @Ajax.ActionLink("Reset Search", "Index", new
+                {
+                    publicId = Model.First().Folder_ID
+                }, new AjaxOptions
+                {
+                    HttpMethod = "GET",
+                    InsertionMode = InsertionMode.ReplaceWith,
+                    UpdateTargetId = "public_table",
+                    OnComplete = "updateCurrentCount",
+                    OnSuccess = "clearFields"
+                }, new { @class = "button", id = "clearButton" })
         </div>
 
-        @Html.Partial("_Form", Model)
-        @Html.Partial("_PublicTable", Model)
     </div>
-    <div class="c_b"></div>
+
+    @Html.Partial("_Form", Model)
+    @Html.Partial("_PublicTable", Model)
+</div>
+<div class="c_b"></div>
 </div>
