--- a/DocSearch2.1/Content/Site.css
+++ b/DocSearch2.1/Content/Site.css
@@ -2,10 +2,7 @@
 
 /*The side nav title heads*/
 /*doesnt seem to be in effect*/
-/*h2 {
-    font-size: 16px;
-    margin-left: 10px;
-}*/
+
 
 /*the results status line*/
 h4 {
@@ -41,13 +38,9 @@ table {
 }
 
     th, td {
-        /*may not be used*/
-        /*padding-left: 5px;
-        padding-right: 5px;*/
         text-align: center;
         font-size: 16px;
         border: 1px solid black !important; /*needs important to overrule grey table look*/
-
     }
 
     /*makes th not wrap*/
@@ -59,16 +52,6 @@ table {
         th a {
             color: inherit;
         }
-
-    /*this makes the row highlighting disappear, not sure if I want*/
-    /*td {
-        background: white;
-    }*/
-
-/*dont think its affecting anything*/
-/*form {
-    margin-right: 10px;
-}*/
 
     /*Affects the Search box text*/
     form input {
@@ -88,9 +71,7 @@ header {
 /*Makes the nav height to match remaining screen height, breaks for mobile*/
 #public_navigation {
     background-color: lightgrey;
-    /*height: inherit;*/
     width: 25%;
-    /*min-width: 200px;*/
     padding: 0;
 }
 
@@ -175,7 +156,6 @@ header {
 
     /*affects the overall list box*/
     .nav_lists_outer {
-        /*overflow-y: hidden; Makes #outer contain its floated children */
         margin: 0;
         width: 100%;
         height: 80%;
@@ -191,7 +171,6 @@ header {
 
             /*Affects the nav bar list, as well as the pagedList*/
             .nav_lists ul{
-                /*float: left; NOT DOING ANYTHING. Make this div as wide as its contents */
                 /* Colours and borders for illustration purposes */
                 width: inherit;
                 list-style-type: none;
@@ -227,7 +206,6 @@ header {
 
             /*Needed to allow a scrollable policy list if needed*/
             #policy_section {
-                /*height: 100%;*/
                 width: auto; /*might not be needed*/
             }
 
@@ -249,9 +227,7 @@ header {
     height: 90vh;
     width: 75%;
     flex: auto;
-    /*overflow-y:auto;*/ /*Makes it that the parent div will adjust height to dynamic table height*/
     background-color: white;
-    /*overflow:hidden;*/
 }
 
 header {
@@ -259,30 +235,35 @@ header {
 }
     /*Constant 'public' info display*/
     .public_name_id {
-        /*height: 75px;
-        text-align: left;*/
-        /*position: absolute;
-        bottom: 0;*/
         position: absolute;
         bottom: 0;
         left: 10px;
         }
 
-        /*affects the name and id status positioning*/
-        /*.public_name_id h3 {
-            position: absolute;
-            top: 25%;
-            left: 25%;
-        }*/
-
     /*Gives the input boxes a better look*/
     .filter {
         text-align: center;
-        margin-bottom: 5px;
+        margin-bottom: 15px;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content : flex-start;
+
     }
+
+    .buttondiv {
+
+    }
+
+    #formSubmitId {
+        margin: auto 0;
+    }
+
+    #clearButton {
+    }
+
+    /*#status-bar-form {
+        margin: 20px !important;
+    }*/
 
     /*Anchors with class 'button' changes (i.e. Clear Button)*/
     a.button, #formSubmitId {
@@ -299,6 +280,13 @@ header {
         border-bottom: 1px solid #000;
         border-left: 1px solid #000;
         margin-bottom: 10px;
+        text-align: center;
+    }
+
+    a.button {
+            display: flex;
+            flex-direction: column;
+            justify-content : flex-start;
     }
 
     a.button:active {
@@ -324,11 +312,6 @@ header {
 .category .main-rows>th:nth-child(-4n+8), .category .main-rows>td:nth-child(-4n+8), .category .main-rows>th:nth-child(-3n+6), .category .main-rows>td:nth-child(-3n+6), .category .main-rows > th:nth-child(5), .category .main-rows > td:nth-child(5) {
     display: none;
 }
-
-/*Hides select columns when in subcategory - category*/
-/*.category .main-rows>th:nth-child(-4n + 11), .category .main-rows>td:nth-child(-4n + 11), .category .main-rows>th:nth-child(-4n + 8), .category .main-rows>td:nth-child(-4n + 8), .category .main-rows>th:nth-child(11), .category .main-rows>td:nth-child(11), .category .main-rows>th:nth-child(6), .category .main-rows>td:nth-child(6), .category .main-rows>th:nth-child(5), .category .main-rows>td:nth-child(5){
-    display: none;
-}*/
 
 /*2, 9, 10, 11*/
 /*1, 3, 4, 5, 6, 7, 8*/
@@ -374,26 +357,11 @@ header {
         margin-right: auto;
     }
 
-        /*not sure if doing anything*/
-        /*.PagedList-pageCountAndLocation {
-            white-space:nowrap;
-        }*/
-
-
 /*****Tags from the JS manipulation page******/
 
-/*not sure if doing anything*/
-/*.nav_cate_hover{
-    background-color: #555;
-    color: white;
-    text-decoration: none;
-    overflow: auto;
-    clear: both;
-}*/
 
 /*gives style to current active navbar list item*/
 .active {
-    /*background-color: #26728a;*/
     background-color: #4e4848;
     overflow: hidden;
     clear: both;
@@ -452,22 +420,22 @@ header {
         /* The slider back area*/
         .slider {
             top: -20px;
-            left: 10px;
-            right: 10px;
+            left: 15px;
+            right: 19px;
             bottom: 0;
         }
 
             /*the slider white circle*/
             .slider:before {
-                left: 2px;
-                bottom: 25px;
+                left: 4px;
+                bottom: 24px;
             }
 
             /*The Slider Movement Animation*/
             input:checked + .slider:before {
-                -webkit-transform: translateY(200px);
-                -ms-transform: translateY(200px);
-                transform: translateY(200px);
+                -webkit-transform: translateY(20px);
+                -ms-transform: translateY(20px);
+                transform: translateY(20px);
             }
 
     /*affects the category names*/
@@ -506,5 +474,25 @@ th {
 
 #dynamic {
     border: solid black 4px;
+}
+
+#status-bar-form {
+    padding: 15px;
+}
+
+/*may remove if not using textfill*/
+#status-message {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#form-div {
+}
+
+#form-div form{
+}
+
+form > div{
+    margin: 0 !important;
 }
 
