--- a/DocSearch2.1/Views/Shared/_Form.cshtml
+++ b/DocSearch2.1/Views/Shared/_Form.cshtml
@@ -2,12 +2,46 @@
 <!--Search Box, Date Filters, clear, and submit button-->
 <div id="form-div">
     <form method="get" action="@Url.Action("Index")" data-otf-ajax="true" data-otf-target="#public_table" class="row">
-        <div class="filter col-md-3">
-            <label for="search">Search Description:</label>
             <input id="search" type="hidden" name="publicId" value="@Model.First().Folder_ID" />
+            <div id="status-bar-form" class="col-md-12 row">
 
-            <input id="searchInputBox" type="search" name="searchTerm" />
-            @*<fieldset>
+                <div class="col-md-3">
+                    <fieldset>
+                        Records per page:
+                        <select id="pageSize" name="pageSize">
+                            <option value=10>10</option>
+                            <option value=20 selected>20</option>
+                            <option value=50>50</option>
+                            <option value=1000>All</option>
+                        </select>
+                    </fieldset>
+                </div>
+
+                <div id="text-fill" class="col-md-6"><span id="status-message">Returning <span id="currentCount">@ViewData["currentRecordsCount"]</span> of @ViewData["allRecordsCount"] documents, <span id="currentLowYear">@(((List<SelectListItem>)TempData["YearRange"]).First().Text)</span> to <span id="currentHighYear">@(((List<SelectListItem>)TempData["YearRange"]).Last().Text)</span></span></div>
+
+                @*<div class="col-md-7"><h4>Returning <span id="currentCount">@ViewData["currentRecordsCount"]</span> of @ViewData["allRecordsCount"] documents between <span id="currentLowYear">@(((List<SelectListItem>)TempData["YearRange"]).First().Text)</span> and <span id="currentHighYear">@(((List<SelectListItem>)TempData["YearRange"]).Last().Text)</span></h4></div>*@
+                @*<div class="col-md-6"></div>*@
+                <div class="col-md-3">
+                    @Ajax.ActionLink("<< Reset Search", "Index", new
+                       {
+                           publicId = Model.First().Folder_ID
+                       }, new AjaxOptions
+                       {
+                           HttpMethod = "GET",
+                           InsertionMode = InsertionMode.ReplaceWith,
+                           UpdateTargetId = "public_table",
+                           OnComplete = "updateCurrentCount",
+                           OnSuccess = "clearFields"
+                       }, new { @class = "button", id = "clearButton" })
+                </div>
+            </div>
+        <div class="col-md-12 row">
+            <div class="filter col-md-3">
+                <label for="search">Search Description:</label>
+                @*<input id="search" type="hidden" name="publicId" value="@Model.First().Folder_ID" />*@
+
+                <input id="searchInputBox" type="search" name="searchTerm" />
+                @*<fieldset>
                 Records per page:
                 <select id="pageSize" name="pageSize">
                     <option value=10>10</option>
@@ -16,34 +50,35 @@
                     <option value=1000>All</option>
                 </select>
             </fieldset>*@
-        </div>
-        <div class="filter col-md-3">
-            <label for="IssueDateMinRange">Issue Date Starting year:</label>
-            @Html.DropDownList("IssueYearMinRange", TempData["YearRange"] as List<SelectListItem>, "Select a Year", new { @class = "datefield", type = "date" })
-            <br />
-        </div>
-        <div class="filter col-md-3">
-            <label for="IssueDateMaxRange">Issue Date Ending year:</label>
-            @Html.DropDownList("IssueYearMaxRange", TempData["YearRange"] as List<SelectListItem>, "Select a Year", new { @class = "datefield", type = "date" })
-            <br />
-            @if (TempData["Role"] != null && TempData["Role"].ToString() == "Admin")
+            </div>
+            <div class="filter col-md-3">
+                <label for="IssueDateMinRange">Issue Date Starting year:</label>
+                @Html.DropDownList("IssueYearMinRange", TempData["YearRange"] as List<SelectListItem>, "Select a Year", new { @class = "datefield", type = "date" })
+                <br />
+            </div>
+            <div class="filter col-md-3">
+                <label for="IssueDateMaxRange">Issue Date Ending year:</label>
+                @Html.DropDownList("IssueYearMaxRange", TempData["YearRange"] as List<SelectListItem>, "Select a Year", new { @class = "datefield", type = "date" })
+                <br />
+                @if (TempData["Role"] != null && TempData["Role"].ToString() == "Admin")
             {
-                <button id="editList">Edit These Files</button>
-            }
+                    <button id="editList">Edit These Files</button>
+                }
+            </div>
+            <div class="filter col-md-3 buttondiv">
+                @*@Ajax.ActionLink("Reset Search", "Index", new
+            {
+                publicId = Model.First().Folder_ID
+            }, new AjaxOptions
+            {
+                HttpMethod = "GET",
+                InsertionMode = InsertionMode.ReplaceWith,
+                UpdateTargetId = "public_table",
+                OnComplete = "updateCurrentCount",
+                OnSuccess = "clearFields"
+            }, new { @class = "button", id = "clearButton" })*@
+                <input id="formSubmitId" type="submit" value="Search and Filter" />
+            </div>
         </div>
-        <div class="filter col-md-3 buttondiv">
-            @*@Ajax.ActionLink("Reset Search", "Index", new
-               {
-                   publicId = Model.First().Folder_ID
-               }, new AjaxOptions
-               {
-                   HttpMethod = "GET",
-                   InsertionMode = InsertionMode.ReplaceWith,
-                   UpdateTargetId = "public_table",
-                   OnComplete = "updateCurrentCount",
-                   OnSuccess = "clearFields"
-               }, new { @class = "button", id = "clearButton" })*@
-            <input id="formSubmitId" type="submit" value="Search and Filter" />
-        </div>
-    </form>
+</form>
 </div>
