--- a/DocSearch2.1/Views/Admin/_EditTable.cshtml
+++ b/DocSearch2.1/Views/Admin/_EditTable.cshtml
@@ -1,68 +1,56 @@
 ﻿@model IEnumerable<DocSearch2._1.ViewModels.PublicVM>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Folder_ID)
-        </th>
+        <!--NEED EDITABLE Direction-->
+        <!--NEED EDITABLE Recipient-->
+        <!--NEED EDITABLE Recieved On-->
         <th>
             @Html.DisplayNameFor(model => model.Document_ID)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.DocumentType_ID)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.DocumentTypeName)
         </th>
-        <th>
+        <th><!--EDITABLE-->
             @Html.DisplayNameFor(model => model.IssueDate)
         </th>
-        <th>
+        <th><!--EDITABLE-->
             @Html.DisplayNameFor(model => model.Description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Category_ID)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.CategoryName)
         </th>
-        <th>
+        @*<th>
             @Html.DisplayNameFor(model => model.EffectiveDate)
-        </th>
-        <th>
+        </th>*@
+        @*<th>
             @Html.DisplayNameFor(model => model.RefNumber)
-        </th>
-        <th>
+        </th>*@
+        @*<th>
             @Html.DisplayNameFor(model => model.FileType)
-        </th>
-        <th>
+        </th>*@
+        <th><!--EDITABLE-->
             @Html.DisplayNameFor(model => model.Method)
         </th>
-        <th>
+        <th><!--EDITABLE-->
             @Html.DisplayNameFor(model => model.Originator)
         </th>
-        <th>
+        <th><!--EDITABLE-->
             @Html.DisplayNameFor(model => model.Reason)
         </th>
-        <th>
+        @*<th>
             @Html.DisplayNameFor(model => model.Supplier)
-        </th>
-        <th></th>
+        </th>*@
+        <th>Direction</th>
+        <th>Recepient</th>
+        <th>Recieved On</th>
+        <th>Delete</th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Folder_ID)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Document_ID)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DocumentType_ID)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.DocumentTypeName)
@@ -71,41 +59,53 @@
             @Html.DisplayFor(modelItem => item.IssueDate)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Category_ID)
+            @*@Html.DisplayFor(modelItem => item.Description)*@
+            @Html.TextAreaFor(modelItem => item.Description, new { @class = "form-control", rows = "3"})
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.CategoryName)
         </td>
-        <td>
+        @*<td>
             @Html.DisplayFor(modelItem => item.EffectiveDate)
-        </td>
-        <td>
+        </td>*@
+        @*<td>
             @Html.DisplayFor(modelItem => item.RefNumber)
-        </td>
-        <td>
+        </td>*@
+        @*<td>
             @Html.DisplayFor(modelItem => item.FileType)
-        </td>
+        </td>*@
         <td>
             @Html.DisplayFor(modelItem => item.Method)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Originator)
+            @*@Html.DisplayFor(modelItem => item.Originator)*@
+            @Html.TextBoxFor(modelItem => item.Originator)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Reason)
+            @*@Html.DisplayFor(modelItem => item.Reason)*@
+            @Html.DropDownListFor(modelItem => item.Reason, new List<SelectListItem> {
+
+                new SelectListItem { Value = "0", Text = "Cancel/Lapse" },
+                new SelectListItem { Value = "1", Text = "Endorse" },
+                new SelectListItem { Value = "0", Text = "Renew" },
+                new SelectListItem { Value = "0", Text = "Quote" },
+                new SelectListItem { Value = "0", Text = "New" },
+                new SelectListItem { Value = "0", Text = "Statement" },
+                new SelectListItem { Value = "0", Text = "Reissue" },
+                new SelectListItem { Value = "0", Text = "Other" }
+
+            }, item.Reason, null)
         </td>
-        <td>
+        @*<td>
             @Html.DisplayFor(modelItem => item.Supplier)
-        </td>
+        </td>*@
+        <td></td>
+        <td></td>
+        <td></td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
             @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
         </td>
     </tr>
 }
-
 </table>
+<button>Submit</button>
