--- a/DocSearch2.1/Views/Home/Index.cshtml
+++ b/DocSearch2.1/Views/Home/Index.cshtml
@@ -13,6 +13,7 @@
     <h2>Mary: 1186367</h2>
     <h2>Jackie Tester account with training2 server: 1435693</h2>
     <h2>Client Id with a picture: 1403635</h2>
+    <h2>Browns Client Id = 1012504</h2>
     @Html.Label("ClientId", "Client Id")
     @Html.TextBox("ClientId", 568801);
 
