--- a/DocSearch2.1/Views/Shared/_Form.cshtml
+++ b/DocSearch2.1/Views/Shared/_Form.cshtml
@@ -3,6 +3,7 @@
 <div id="form-div">
     <form method="get" action="@Url.Action("Index")" data-otf-ajax="true" data-otf-target="#public_table" class="row">
         <input id="search" type="hidden" name="publicId" value="@Model.First().Folder_ID" />
+        <p>Date: <input type="text" class="edit-issue"></p>
         <div id="status-bar-form" class="col-md-12 row">
 
             <div class="col-md-3">
