--- a/DocSearch2.1/Views/Home/Index.cshtml
+++ b/DocSearch2.1/Views/Home/Index.cshtml
@@ -7,6 +7,7 @@
 
 @using (Html.BeginForm("Index", "Folder", FormMethod.Get))
 {
+    <p>Date: <input type="text" class="edit-issue"></p>
 
     <h1>Enter the Client Id then Submit</h1>
     <h2>Ramin: 568801</h2>
